updated dependencies to achieve JDK 11 compatibility